# pyslm

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pythonapp.yml  pythonpublish.yml  release.yml
docs/: conf.py  examples.rst  index.rst  install.rst  modules.rst  references.rst  requirements.txt
docs/examples/: basic_analysis.rst  basic_geometry.rst  basic_hatching.rst  basic_support.rst  basic_visualisation.rst
examples/: example.py  example_3d.py  example_3d_multithread.py  example_bitmap_slice.py  example_build_time_analysis.py  example_custom_island_hatcher.py  example_custom_sinusoidal_hatching.py  example_exporting.py  example_exporting_multilayer.py  example_heatmap.py  example_implicit_surface.py  example_importing.py  example_island_hatcher.py  example_laser_iterator.py  example_parametric_study.py  example_support_structure.py
models/: cornerCube.step  cube.stl  cube_rounds.stl  frameGuide.stl  inversePyramid.stl  nut.stl  parameter_quality_nut_2.stl
pyslm/: __init__.py  core.py  export.py  visualise.py
pyslm/analysis/: __init__.py  iterator.py  utils.py
pyslm/geometry/: __init__.py  geometry.py  utils.py
pyslm/hatching/: __init__.py  hatching.py  islandHatcher.py  sorting.py  utils.py
pyslm/support/: __init__.py  geometry.py  gridBlockSupport.py  render.py  support.py  utils.py
tests/: context.py  test_advanced.py  test_basic.py
